--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,8 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="extended_fab_content_desc">add new task</string>
+    <string name="extended_fab_label">add task</string>
+    <string name="fab_content_desc">add task</string>
 
 </resources>
