--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="extended_fab_label">add task</string>
     <string name="fab_content_desc">add task</string>
     <string name="task_input_hint">enter a task descryption</string>
+    <string name="show_detail_button">:</string>
 
 </resources>
